2008-05-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodetypesymbolbinding.vala: fix double properties

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vala/valastringliteral.vala:

	Fix syntax error in .vapi file when using string literal as default
	argument, patch by Jared Moore, fixes bug 532564

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodewriter.vala:
	* gobject/valaccodegeneratorsourcefile.vala:

	Fix crash when opening output file fails, fixes bug 466573

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix freeing nested GLists and
	GSLists, fixes bug 443514

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: remove obsolete GList copy code

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsignal.vala:

	Use correct marshaller for string arrays,
	patch by Ali Sabil, fixes bug 531251

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valafieldprototype.vala:
	* vala/valasemanticanalyzer.vala:

	Set appropriate static type for field prototypes, fixes bug 532314

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vapi: specify free functions, fixes bug 531631

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaintegertype.vala: fix assignment of integer literals to
	derived integer types, fixes bug 530809

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_message_dialog_new* bindings,
	fixes bug 531628

	* vapi/gtk+-2.0.vapi: regenerated

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/glib-2.0.vapi:
	* vapi/gmodule-2.0.vapi:
	* vapi/gstreamer-0.10.deps:

	Move dynamic module loading support into separate VAPI file and
	improve bindings, fixes bug 531583

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add g_strv_length binding

2008-05-11  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: remove obsolete InstanceLast attributes
